--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
           "time",
           "timeEnd",
           "error",
-          "info"
+          "info",
+          "debug"
         ]
       }
     ],
