--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Sudoku project",
   "main": "index.js",
   "scripts": {
-    "precommit": "npm run lint && npm run test",
+    "precommit": "npm run lint && npm run search-circular-dependencies && npm run test",
     "lint": "npx eslint -c .eslintrc.json src test",
     "lint:fix": "npx eslint --fix -c .eslintrc.json src test",
-    "test": "jest -c jest.config.json"
+    "test": "jest -c jest.config.json",
+    "search-circular-dependencies": "npx madge -c ./index.js ./src",
+    "coveralls": "coveralls < ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -28,11 +30,13 @@
     "node": ">11.0.0"
   },
   "devDependencies": {
+    "coveralls": "^3.1.1",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.3.1",
+    "madge": "^5.0.1",
     "prettier": "^2.4.1"
   }
 }
