--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Sudoku project",
   "main": "index.js",
   "scripts": {
-    "precommit": "npm run lint && npm run search-circular-dependencies && npm run test",
+    "precommit": "npm run lint && npm run search-circular-dependencies && npm run search-duplicate-code && npm run test",
     "lint": "npx eslint -c .eslintrc.json src test",
     "lint:fix": "npx eslint --fix -c .eslintrc.json src test",
     "test": "jest -c jest.config.json",
     "search-circular-dependencies": "npx madge -c ./index.js ./src",
+    "search-duplicate-code": "npx jscpd ./index.js ./src",
     "coveralls": "coveralls < ./coverage/lcov.info"
   },
   "repository": {
@@ -36,6 +37,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.3.1",
+    "jscpd": "^3.4.2",
     "madge": "^5.0.1",
     "prettier": "^2.4.1"
   }
