--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint:fix": "npx eslint --fix -c .eslintrc.json src test",
     "test": "jest -c jest.config.json",
     "search-circular-dependencies": "npx madge -c ./index.js ./src",
-    "search-duplicate-code": "npx jscpd ./index.js ./src",
-    "coveralls": "coveralls < ./coverage/lcov.info"
+    "search-duplicate-code": "npx jscpd ./index.js ./src"
   },
   "repository": {
     "type": "git",
@@ -31,14 +30,13 @@
     "node": ">11.0.0"
   },
   "devDependencies": {
-    "coveralls": "^3.1.1",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.3.1",
-    "jscpd": "^3.4.2",
-    "madge": "^5.0.1",
+    "jest": "^29.5.0",
+    "jscpd": "^3.5.9",
+    "madge": "^6.0.0",
     "prettier": "^2.4.1"
   }
 }
