--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,20 +5,35 @@
     "node": true,
     "jest": true
   },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:node/recommended",
-    "plugin:prettier/recommended"
-  ],
-  "plugins": [
+    "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
+  "settings": {
+    "node": {
+      "tryExtensions": [
+        ".js",
+        ".json",
+        ".node",
+        ".ts",
+        ".d.ts"
+      ]
+    }
+  },
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaVersion": 2021
   },
   "rules": {
     "strict": [
@@ -26,16 +41,7 @@
       "global"
     ],
     "no-console": [
-      "error",
-      {
-        "allow": [
-          "time",
-          "timeEnd",
-          "error",
-          "info",
-          "debug"
-        ]
-      }
+      "error"
     ],
     "new-cap": [
       "off"
