--- a/jest.config.json
+++ b/jest.config.json
@@ -2,15 +2,26 @@
   "testEnvironment": "node",
   "verbose": true,
   "bail": true,
-  "testRegex": "(unit).test.js$",
+  "testRegex": "(unit).test.(js|ts)$",
+  "moduleFileExtensions": [
+    "ts",
+    "tsx",
+    "js",
+    "jsx",
+    "json",
+    "node"
+  ],
+  "transform": {
+    "^.+\\.(t|j)sx?$": "ts-jest"
+  },
   "collectCoverage": true,
   "collectCoverageFrom": [
-    "**/*.{js,jsx}",
+    "src/**/*.{ts,tsx}",
     "!**/coverage/**",
     "!**/docs/**",
+    "!**/lib/**",
     "!**/node_modules/**",
-    "!**/test/**",
-    "!**/seeds/**"
+    "!**/test/**"
   ],
   "coverageThreshold": {
     "global": {
