--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "SudokuBox is an open source project that solves 9x9 sudoku puzzle.",
   "main": "lib/esm/index.js",
   "types": "lib/types/index.d.ts",
+  "module": "lib/esm/index.js",
+  "typings": "lib/types/index.d.ts",
   "files": [
     "lib/**/*",
     "!**/*.map"
