--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "sudokubox",
   "version": "0.35.1",
   "description": "SudokuBox is an open source project that solves 9x9 sudoku puzzle.",
-  "main": "lib/esm/index.js",
-  "types": "lib/types/index.d.ts",
-  "module": "lib/esm/index.js",
-  "typings": "lib/types/index.d.ts",
+  "main": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
+  "module": "dist/esm/index.js",
+  "typings": "dist/types/index.d.ts",
   "files": [
-    "lib/**/*",
-    "!**/*.map"
+    "dist",
+    "src"
   ],
   "exports": {
-    "import": "./lib/esm/index.js",
-    "require": "./lib/cjs/index.js",
-    "default": "./lib/esm/index.js"
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js",
+    "default": "./dist/esm/index.js"
   },
   "scripts": {
     "test": "jest -c jest.config.json",
@@ -49,15 +49,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "pino": "^8.14.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
