--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig-base.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "outDir": "lib/cjs",
+    "outDir": "dist/cjs",
     "target": "ES6"
   }
 }
